Add API key and secret to secrets.toml

--- a/.streamlit/secret.toml
+++ b/.streamlit/secret.toml
@@ -3,3 +3,5 @@ your-project/
 ├── requirements.txt
 └── .streamlit/
     └── secrets.toml
+ZERODHA_API_KEY = "your_api_key_here"
+ZERODHA_API_SECRET = "your_api_secret_here"
