Add instructions for secrets.toml setup
Added instructions to create the secrets.toml file.

--- a/.streamlit/secret.toml
+++ b/.streamlit/secret.toml
@@ -5,3 +5,6 @@ your-project/
     └── secrets.toml
 ZERODHA_API_KEY = "your_api_key_here"
 ZERODHA_API_SECRET = "your_api_secret_here"
+# Create the folder and file
+mkdir .streamlit
+echo '[ZERODHA_API_KEY] = "your_key_here"' > .streamlit/secrets.toml
